--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   shared_preferences: ^2.1.0
   cached_network_image: ^3.2.3
   dio_cache_interceptor: ^3.4.2
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   auto_route_generator: ^6.2.0
