--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,39 +7,39 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
-  auto_route: ^6.3.0
-  bloc: ^8.1.1
-  dio: ^5.1.1
+  auto_route: ^7.2.0
+  bloc: ^8.1.2
+  dio: ^5.1.2
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
-  freezed: ^2.3.2
+  freezed: ^2.3.4
   freezed_annotation: ^2.2.0
-  get_it: ^7.3.0
-  json_annotation: ^4.8.0
+  get_it: ^7.6.0
+  json_annotation: ^4.8.1
   injectable: ^2.1.1
   intl: any
   lottie: ^2.3.2
   retrofit: ^4.0.1
-  shared_preferences: ^2.1.0
+  shared_preferences: ^2.1.1
   cached_network_image: ^3.2.3
   dio_cache_interceptor: ^3.4.2
   google_fonts: ^4.0.4
 
 dev_dependencies:
-  auto_route_generator: ^6.2.0
-  bloc_test: ^9.1.1
+  auto_route_generator: ^7.1.1
+  bloc_test: ^9.1.2
   build_runner: ^2.3.3
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.1.5
   json_serializable: ^6.3.1
   mocktail: ^0.3.0
-  retrofit_generator: ^6.0.0+3
+  retrofit_generator: ^7.0.1
   very_good_analysis: ^4.0.0
 
 flutter:
