--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   auto_route: ^7.2.0
@@ -31,16 +31,16 @@ dependencies:
 dev_dependencies:
   auto_route_generator: ^7.1.1
   bloc_test: ^9.1.2
-  build_runner: ^2.3.3
+  build_runner: ^2.4.4
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.2.19
+  flutter_native_splash: ^2.3.0
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.1.5
-  json_serializable: ^6.3.1
+  json_serializable: ^6.7.0
   mocktail: ^0.3.0
   retrofit_generator: ^7.0.1
-  very_good_analysis: ^4.0.0
+  very_good_analysis: ^5.0.0+1
 
 flutter:
   uses-material-design: true
