--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,12 @@ dependencies:
   injectable: ^2.1.1
   intl: any
   lottie: ^2.3.2
-  retrofit: ^4.0.1
   shared_preferences: ^2.1.1
   cached_network_image: ^3.2.3
-  dio_cache_interceptor: ^3.4.2
   google_fonts: ^4.0.4
+  pokedex_api:
+    path: packages/pokedex_api
+  dio_cache_interceptor: ^3.4.2
 
 dev_dependencies:
   auto_route_generator: ^7.1.1
@@ -39,7 +40,6 @@ dev_dependencies:
   injectable_generator: ^2.1.5
   json_serializable: ^6.7.0
   mocktail: ^0.3.0
-  retrofit_generator: ^7.0.1
   very_good_analysis: ^5.0.0+1
 
 flutter:
