--- a/packages/pokedex_api/analysis_options.yaml
+++ b/packages/pokedex_api/analysis_options.yaml
@@ -10,3 +10,4 @@ linter:
     library_private_types_in_public_api: false
     use_build_context_synchronously: false
     public_member_api_docs: false
+    lines_longer_than_80_chars: false
