--- a/packages/pokedex_api/pubspec.yaml
+++ b/packages/pokedex_api/pubspec.yaml
@@ -12,6 +12,7 @@ dev_dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   json_serializable: ^6.7.0
+  mockito: ^5.4.2
   mocktail: ^0.3.0
   retrofit_generator: ^7.0.1
   test: ^1.19.2
