--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dev_dependencies:
     sdk: flutter
   injectable_generator: ^2.1.5
   json_serializable: ^6.7.0
+  melos: ^3.1.0
   mocktail: ^0.3.0
   very_good_analysis: ^5.0.0+1
 
